sim-traffic-light/src/main/k8s/sim-traffic-light.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
     app: sim-traffic-light
  name: sim-traffic-light
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sim-traffic-light
  template:
    metadata:
      labels:
        app: sim-traffic-light
    spec:
      containers:
      - name: kogito
        image: image-registry.openshift-image-registry.svc:5000/cicd/sim-traffic-light:latest
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
