sim-traffic-light/src/main/k8s/sim-traffic-light.Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sim-traffic-light
spec:
  selector:
    app: sim-traffic-light
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
