sim-traffic-light/src/main/k8s/sim-traffic-light.Route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sim-traffic-light
spec:
  to:
    kind: Service
    name: sim-traffic-light
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
